<resources>
    <string name="app_name">mypayment</string>

    <string name="coll"></string>
    <string name="login">Login</string>
    <string name="logo_img">logo_img</string>
    <string name="hint_email">Email</string>
    <string name="btnRegister">Register</string>
    <string name="customerlogin">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="customersignup">Signup</string>
    <string name="hintpassword">Password</string>
    <string name="toolbarpayment_history">Payment history</string>
    <string name="rightIcon_img">rightIcon_img</string>
    <string name="paymenttablename">Name</string>
    <string name="paymenttableprice">Price</string>
    <string name="paymenthistoryravidu">Ravidu</string>
    <string name="paymenthistory_50">$50</string>
    <string name="paymenthistorykavidu">Kavidu</string>
    <string name="paymenthistory_60">$60</string>
    <string name="paymenthistorysarah">Sarah</string>
    <string name="paymenthistory_70">$70</string>
    <string name="visa">visa</string>
    <string name="cardexpire_date">Expire Date</string>
    <string name="visacvc">CVC</string>
    <string name="btnsave">Save</string>
    <string name="btncancel">Cancel</string>
    <string name="card_type">CardType</string>
    <string name="cardholder_s_name">CardHolder\'s Name</string>
    <string name="cardnumber">cardnumber</string>
    <string name="card_number">xxxx-xxxx-xxxx-xxxx</string>
    <string name="delete">Delete</string>
    <string name="btn_edit" />
    <string name="edit">Edit</string>
    <string name="card_number2">xxxx-xxxx-xxxx-xxxx</string>
    <string name="btndelete">Delete</string>
    <string name="btnedit2">Edit</string>
    <string name="hotel_bookingimg">hotel booking</string>
    <string name="textpayment">Payment</string>
    <string name="my_booking">My booking</string>
    <string name="feedbackrating">FeedbackRating</string>
    <string name="feedback_img" />
    <string name="mybooking" />
    <string name="paymentimg" />
    <string name="hotelbooking" />
    <string name="cardnumberi_" />
    <string name="editexpirydate">05/2023</string>
    <string name="editcardnumber">1234-5432-7890-2345</string>
    <string name="editcardnumber1">editcardnumber</string>
    <string name="update">Update</string>
    <string name="cardholdername">Ravidu dilusha</string>
    <string name="add_card_button">Add Card Details</string>
    <string name="paymenthistory">payment History</string>
    <string name="edit_card_details">Edit Card Details</string>
    <string name="add_card_details">Add Card Details</string>
    <string name="card_details">Card Details</string>
    <string name="payment">Payment</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="nametxt">nameText</string>
    <string name="cvc">cvc</string>
    <string name="show">show</string>
    <string name="cardtype">getcardtype</string>
    <string name="getdate">get</string>
</resources>