<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Dashboardui">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:barrierMargin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3">

                <TextView
                    android:id="@+id/hotelbooking"
                    android:layout_width="107dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="-7dp"
                    android:text="@string/hotel_bookingimg"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/hotelbookingimg"
                    android:layout_width="65dp"
                    android:layout_height="63dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="57dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="52dp"
                    android:layout_marginBottom="35dp"
                    android:contentDescription="@string/hotelbooking"
                    app:srcCompat="@drawable/booking"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/paymentcard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3">

                <TextView
                    android:id="@+id/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="false"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="81dp"
                    android:layout_marginEnd="49dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textpayment"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/paymentimg"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="49dp"
                    android:layout_marginEnd="61dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/paymentimg"
                    app:srcCompat="@drawable/debitcard"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:barrierMargin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3">

                <TextView
                    android:id="@+id/mybooking"
                    android:layout_width="107dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="-7dp"
                    android:text="@string/my_booking"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/mybookingimg"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="52dp"
                    android:layout_marginEnd="57dp"
                    android:layout_marginBottom="35dp"
                    android:contentDescription="@string/my_booking"
                    app:srcCompat="@drawable/mybooking"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3">

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="142dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="false"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="82dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="-7dp"
                    android:text="@string/feedbackrating"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/feedbackimg"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="53dp"
                    android:layout_marginEnd="58dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/feedback_img"
                    app:srcCompat="@drawable/feedback"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>